# gptokeyb2

./: .gitignore  ADVANCED_USAGE.md  CMakeLists.txt  Dockerfile  README.md  test.gptk  test.gptk.ini  test.ini
.github/workflows/: build.yml
cmake/modules/: LIBEVDEVConfig.cmake
cmake/toolchains/: debian-arm64-gcc-toolchain.cmake  debian-armhf-gcc-toolchain.cmake
interpose/: CMakeLists.txt  interpose.c  interpose.h
src/: Dockerfile  analog.c  config.c  event.c  functions.c  gptokeyb2.h  ini.h  input.c  keyboard.c  keys.c  main.c  state.c  util.c  xbox360.c
